Написал scss для секции intro

--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -17,6 +17,7 @@
         text-decoration: none;
         list-style: none;
         transition: 0.3s;
+        margin-bottom: 62px;
         &:hover {
             color: #635e6e;
         }
