--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .header__wrapper {
   display: flex;
   align-items: center;
@@ -16,7 +17,63 @@
   text-decoration: none;
   list-style: none;
   transition: 0.3s;
+  margin-bottom: 62px;
 }
 .header__link:hover {
   color: #635e6e;
+}
+
+.intro {
+  text-decoration: none;
+}
+.intro__wrapper {
+  display: flex;
+  align-items: center; /* Выравнивание по вертикали */
+  justify-content: space-between;
+  min-height: 100vh; /* 
+}
+
+&__left {
+    flex: 1;
+    max-width: 50%; /* Занимает половину ширины */
+}
+.intro__text {
+  font-weight: 700;
+  font-size: 128px;
+  text-align: left; /* Текст слева */
+  color: #191919;
+  line-height: 1.1;
+  margin-bottom: 40px;
+  margin-left: 50px;
+}
+.intro__link {
+  font-weight: 400;
+  font-size: 32px;
+  text-align: center;
+  color: #fff;
+  background-color: #191919;
+  padding: 16px 27px 17px;
+  width: 320px;
+  height: 72px;
+  border-radius: 50px;
+  transition: 0.3s;
+  margin-left: 52px;
+  text-decoration: none;
+}
+.intro__link:hover {
+  background-color: #333;
+  transform: translateY(-5px);
+}
+.intro__right {
+  flex: 1;
+  max-width: 50%; /* Занимает половину ширины */
+  display: flex;
+  justify-content: flex-end; /* Картинка справа */
+}
+.intro__img {
+  max-width: 100%;
+  height: auto;
+  max-height: 80vh; /* Ограничиваем высоту картинки */
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=style.css.map */
