Написал scss для секции info

--- a/assets/css/components/_intro.scss
+++ b/assets/css/components/_intro.scss
@@ -1,5 +1,6 @@
 .intro {
     text-decoration: none;
+    padding-bottom: 121px;
     &__wrapper {
         display: flex;
         align-items: center; /* Выравнивание по вертикали */
